--- a/sovits4v2_training_infer.ipynb
+++ b/sovits4v2_training_infer.ipynb
@@ -397,7 +397,7 @@
         "\n",
         "#@markdown # Train cluster model (Optional)\n",
         "\n",
-        "#@markdown #### Details see [README.md#cluster-based-timbre-leakage-control](https://github.com/svc-develop-team/so-vits-svc#cluster-based-timbre-leakage-control)\n",
+        "#@markdown #### Details see [README.md#cluster-based-timbre-leakage-control](https://github.com/justinjohn0306/so-vits-svc-4.0-v2#cluster-based-timbre-leakage-control)\n",
         "\n",
         "#@markdown\n",
         "\n",
@@ -447,7 +447,7 @@
         "\n",
         "#@markdown # Start inference (and download)\n",
         "\n",
-        "#@markdown Parameters see [README.MD#inference](https://github.com/svc-develop-team/so-vits-svc#inference)\n",
+        "#@markdown Parameters see [README.MD#inference](https://github.com/justinjohn0306/so-vits-svc-4.0-v2#inference)\n",
         "\n",
         "#@markdown\n",
         "\n",
