--- a/sovits4v2_training_testing.ipynb
+++ b/sovits4v2_training_testing.ipynb
@@ -92,7 +92,7 @@
         "!git clone https://github.com/justinjohn0306/so-vits-svc-4.0-v2\n",
         "%cd /content/so-vits-svc\n",
         "!pip install --upgrade pip setuptools numpy numba\n",
-        "!pip install pyworld praat-parselmouth fairseq"
+        "!pip install pyworld praat-parselmouth fairseq librosa==0.9.2"
       ],
       "metadata": {
         "id": "0YUGpYrXhMck",
