--- a/sovits4v2_training_testing.ipynb
+++ b/sovits4v2_training_testing.ipynb
@@ -91,7 +91,7 @@
         "\n",
         "#@markdown\n",
         "\n",
-        "!git clone https://github.com/justinjohn0306/so-vits-svc-4.0-v2\n",
+        "!git clone https://github.com/svc-develop-team/so-vits-svc -b 4.0-v2\n",
         "%cd /content/so-vits-svc\n",
         "!pip install --upgrade pip setuptools numpy numba\n",
         "!pip install pyworld praat-parselmouth fairseq tensorboardX"
