--- a/sovits4v2_training_testing.ipynb
+++ b/sovits4v2_training_testing.ipynb
@@ -94,7 +94,7 @@
         "!git clone https://github.com/svc-develop-team/so-vits-svc -b 4.0-v2\n",
         "%cd /content/so-vits-svc\n",
         "!pip install --upgrade pip setuptools numpy numba\n",
-        "!pip install pyworld praat-parselmouth fairseq tensorboardX"
+        "!pip install pyworld praat-parselmouth fairseq tensorboardX librosa==0.9.2"
       ],
       "metadata": {
         "id": "0YUGpYrXhMck",
