--- a/sovits4v2_training_testing.ipynb
+++ b/sovits4v2_training_testing.ipynb
@@ -373,7 +373,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Trainning**"
+        "# **Training**"
       ],
       "metadata": {
         "id": "ENoH-pShel7w"
