downgrade to python 1.13.1

--- a/sovits4v2_training_testing.ipynb
+++ b/sovits4v2_training_testing.ipynb
@@ -94,7 +94,8 @@
         "!git clone https://github.com/svc-develop-team/so-vits-svc -b 4.0-v2\n",
         "%cd /content/so-vits-svc\n",
         "!pip install --upgrade pip setuptools numpy numba\n",
-        "!pip install pyworld praat-parselmouth fairseq tensorboardX librosa==0.9.2"
+        "!pip install pyworld praat-parselmouth fairseq tensorboardX librosa==0.8.1\n"
+        "!pip install torch==1.13.1+cu117 torchvision==0.14.1+cu117 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cu117"
       ],
       "metadata": {
         "id": "0YUGpYrXhMck",
